# wg21

./: .gitignore  .gitmodules  D0315.tex  D0315R1.tex  D0315R2.tex  D0424R0.tex  D0428.tex  D0428R0.tex  D0624.tex  DXXXX.tex  Makefile  P0315.tex  P0315R1.tex  P0424R0.md  P0424R0.tex  P0428.tex  P0428R0.tex  P0624.tex  README.md  TODO.md  additional-annotations.css  constexpr-for.cpp  constexpr-for.tex  defaults.yaml  dr.iostreams.tex  p0107.tex  p0315.tex  p0424.tex  p0624.tex  p0980.tex  p1002.tex  p1004.tex  p1006.tex  p1263.md  p1263.tex  p1264.tex  p1330.tex  p2719.md  p3191.md  p3471.md  (+5 more)
done/: p0424.tex  p0425.tex  p0633.tex  p1002.tex  p1264.tex  p1330.tex
p3516_benchmarks/: CMakeLists.txt  main.cpp
